@@ -1,5 +1,8 @@
 2017-12-07  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
+	* sysdeps/unix/sysv/linux/m68k/sigcontextinfo.h (ucontext_get_pc):
+	New function.
+
 	* sysdeps/unix/sysv/linux/alpha/sigcontextinfo.h (ucontext_get_pc):
 	New function.
 
